--- a/css.works/style.css
+++ b/css.works/style.css
@@ -221,6 +221,13 @@ top: 0px;
 color: #23a6f0;
 
 
+}
 
+.text-h2{
+    height: 50px;
+width: 690px;
+left: 0px;
+top: 34px;
+border-radius: undefinedpx;
 
 }
