--- a/css.works/style.css
+++ b/css.works/style.css
@@ -183,6 +183,7 @@ color:  rgba(255, 255, 255, 1);
     width: 163px;
     height: 50px;
     margin-left: 5px;
+
     
     
 
@@ -213,3 +214,19 @@ text-align: right;
 
 }
 
+ 
+
+.text-practice{
+    height: 24px;
+width: 114px;
+left: 0px;
+top: 0px;
+ color: #23a6f0;
+ margin-left:90px;
+ font-size: 14px;
+ font-weight: 700;
+ line-height: 24px;
+ text-align: left;
+ 
+
+}
