--- a/css.works/style.css
+++ b/css.works/style.css
@@ -230,3 +230,15 @@ top: 0px;
  
 
 }
+
+.text-2{
+    height: 50px;
+width: 690px;
+left: 0px;
+top: 0px; 
+font-weight: 700;
+line-height: 50px;
+text-align: left;
+
+
+}
