--- a/css.works/style.css
+++ b/css.works/style.css
@@ -216,4 +216,15 @@ text-align: right;
 
  
 
+.text-title{
+    height: 24px;
+width: 114px;
+left: 0px;
+top: 0px;
+color: #23a6f0;
+font-size: 14px;
+font-weight: 700;
+line-height: 24px;
+text-align: left;
 
+}
