--- a/css.works/style.css
+++ b/css.works/style.css
@@ -228,3 +228,28 @@ line-height: 24px;
 text-align: left;
 
 }
+
+.text-2{
+    height: 50px;
+width: 585px;
+left: 0px;
+top: 34px;
+font-weight: 700;
+line-height: 50px;
+text-align: left;
+
+
+}
+
+.text-3{
+    height: 40px;
+    width: 469px;
+    left: 0px;
+    top: 94px;
+font-size: 14px;
+font-weight: 400;
+line-height: 20px;
+text-align: left;
+
+    
+}
