--- a/css.works/style.css
+++ b/css.works/style.css
@@ -32,22 +32,16 @@ header{
 
 .logo, .top-menu{
     display: inline-block;
-    margin-right: 29px
+    margin-right: 35px
 }
 
 .top-menu li{ 
     display: inline-block;
     list-style: none;
-    height: 24px;
+    height: 10px;
 width: 43px;
-left: 0px;
-top: 0px;
  margin-left: 23px;
  margin-top: 30px;
-  padding-right:  40px; 
-font-size: 14px;
-font-weight: 700px;
-line-height: 24px;
 text-align: center;
 
      
@@ -56,16 +50,11 @@ text-align: center;
 }
 
 .top-menu a{
-    height: 24px;
-width: 43px;
-left: 0px;
-top: 0px;
+ width: 43px;
 font-size: 14px;
 font-weight: 700;
 line-height: 24px;
-text-align: center;
-   vertical-align: top;
-  color:  rgba(255, 255, 255, 1); 
+color:  rgba(255, 255, 255, 1); 
   
   
 
@@ -74,15 +63,8 @@ text-align: center;
 }
 
 .logo h3 {
-    height: 32px;
-width: 145px;
-left: 0px;
-top: 13px;
 font-size: 24px;
-font-weight: 700px;
-text-align: left;
-margin-right: 50px;
-margin-left: 100px;
+margin-left: 120px;
 color:#fff ;
 
 
@@ -95,15 +77,15 @@ a{
 .button-1{
     height: 52px;
 width: 137px;
-left: 0px;
-top: 0px;
-border-radius: 5px;
-padding: 15px 25px 15px 25px;
+border-radius:  5px; ;
 background: rgba(35, 166, 240, 1);
-  margin-left: 120px;
+  margin-left: 60px;
   margin-top: 20px;
   color:  rgba(255, 255, 255, 1);
    margin-right: 160px;
+   padding: 0;
+   border: none;
+   
 
 
 }
@@ -111,32 +93,26 @@ background: rgba(35, 166, 240, 1);
 .button-img{
     height: 10px;
 width: 12px;
-left: 0px;
-top: 0px;
-border-radius: 0px;
-    margin-left: 10px;
+ margin-left: 15px;
+ 
+    
 }
 
 .text-h4{
     height: 160px;
-width: 542px;
-left: 0px;
-top: 54px;
+ width: 540px;
 font-size: 58px;
-font-weight: 700;
-text-align: left;
 margin-top: 10px; 
 margin-left: 112px;
 color: #fff;
+
 
 }
 
 .Welcome{
     height: 24px;
 width: 77px;
-left: 0px;
-top: 0px;
- margin-top: 145px; 
+ margin-top: 130px; 
  margin-left: 113px;
  color:  rgba(35, 166, 240, 1);
    
@@ -148,15 +124,12 @@ top: 0px;
   
 .text-1{
     height: 60px;
-    width: 376px;
-    left: 0px;
-    top: 244px;
     font-family: arial;
     font-size: 20px;
-    font-weight: 400;
-    text-align: left;
     margin-left: 106px;
     color: #fff;
+     
+
 }
    
  
@@ -165,25 +138,25 @@ top: 0px;
 .button-2{
     height: 52px;
 width: 193px;
-left: 0px;
-top: 0px;
 background-color: rgba(35, 166, 240, 1);
 color: #fff; 
 margin-left: 70px;
 margin-top: 20px;
+padding: 0;
+border: none;
 
 
 }
 
 .button-3{
     background: rgba(37, 43, 66, 1);
-    padding: 8px 30px;
     border: 1px solid #23a6f0;
     color:  #23a6f0; 
     border-radius: 3px;
     width: 163px;
     height: 50px;
-    margin-left: 5px;
+    margin-left: 3px;
+    
 
     
     
@@ -203,43 +176,14 @@ margin-top: 20px;
 
 
 .login {
-    height: 22px;
 width: 41px;
 font-size: 14px;
 font-weight: 700;
 line-height: 22px;
-text-align: right;
   padding-left: 100px;
   margin-top: 30px;
-  margin-left: 130px;
+  margin-left: 120px;
   
 
 }
 
-.conteiner{
-    margin: 0px;
-    padding: 0px;
-    width: 440px;
-    height: 768px;
-    display: flex;
-    justify-content: flex-start;
-    text-align: center;
-
-}
-
-.title-text{
-    height: 24px;
-width: 114px;
-left: 0px;
-top: 0px;
-color: #23a6f0;
-font-size: 14px;
-font-weight: 700;
-line-height: 24px;
-text-align: left;
-margin-top: 200px;
-padding-left: 40px;
-
-
-}
- 
