--- a/css.works/style.css
+++ b/css.works/style.css
@@ -122,10 +122,10 @@ color: #fff;
   
 .text-1{
     height: 70px;
-    font-size: 20px;
+    font-size: 25px;
     margin-left: 110px;
-    margin-top: 10px;
     color: #fff;
+    font-weight: 700;
      
 
 }
@@ -179,7 +179,7 @@ font-size: 14px;
 font-weight: 700;
 line-height: 20px;
   padding-left: 100px;
-  margin-top: 30px;
+  margin-top: 40px;
   margin-left: 160px;
   
 
@@ -198,8 +198,9 @@ display: block;
 width: 114px;
 font-weight: 700;
 color: #23a6f0;
-margin-top:40px;
-margin-left: 20px;
+margin-top:30px;
+margin-left: 40px;
+padding-top: 10px;
 
 }
 
@@ -208,12 +209,15 @@ margin-left: 20px;
 width: 585px;
  color: #fff;
  margin-left: 40px;
- margin-top: 30px;
+ margin-top: 5px;
+ font-size: 20px;
  
 }
 
 .text-3{
     margin-left: 30px;
    color: #fff;
+   font-size: 15px;
+   margin-top: 10px;
 }
 
