--- a/css.works/style.css
+++ b/css.works/style.css
@@ -110,7 +110,7 @@ color: #fff;
 
 .Welcome{
     height: 24px;
- margin-top: 130px; 
+   margin-top: 130px; 
  margin-left: 113px;
  color:  rgba(35, 166, 240, 1);
    
@@ -193,12 +193,10 @@ line-height: 20px;
 
 .title-text{
     height: 24px;
-width: 114px;
-font-weight: 700;
 color: #23a6f0;
 margin-top :50px;
 margin-left: 40px;
-padding-top: 10px;
+padding-top: 
 
 }
 
