--- a/css.works/style.css
+++ b/css.works/style.css
@@ -189,7 +189,9 @@ line-height: 20px;
 
 
 
-
+.title{
+    height: 768px;
+}
 
 .title-text{
     height: 24px;
@@ -208,6 +210,8 @@ width: 585px;
  margin-top: 5px;
  font-size: 20px;
  
+
+ 
 }
 
 .text-3{
@@ -215,5 +219,6 @@ width: 585px;
    color: #fff;
    font-size: 15px;
    margin-top: 10px;
+   
 }
 
