--- a/css.works/style.css
+++ b/css.works/style.css
@@ -22,7 +22,7 @@ header{
     display: flex;
     justify-content: space-between;
     
-    color: #fff;
+    
     background-color: #252b42;
     
     
@@ -84,6 +84,7 @@ background: rgba(35, 166, 240, 1);
    padding: 0;
    border: none;
    font-size: 14px;
+   cursor: pointer;
    
 
 
@@ -142,6 +143,7 @@ margin-left: 90px;
 margin-top: 20px;
 padding: 0;
 border: none;
+cursor: pointer;
 
 
 }
@@ -154,6 +156,7 @@ border: none;
     width: 163px;
     height: 50px;
     margin-left: 3px;
+    cursor: pointer;
     
 
     
@@ -173,14 +176,17 @@ border: none;
 
 
 
-.login {
+.login{
 width: 41px;
 font-size: 14px;
 font-weight: 700;
 line-height: 20px;
   padding-left: 100px;
   margin-top: 40px;
-  margin-left: 160px;
+  margin-left: 165px;
+  color: #fff;
+     
+
   
 
 }
