--- a/css.works/style.css
+++ b/css.works/style.css
@@ -228,3 +228,101 @@ width: 585px;
    
 }
 
+.cards{
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.wrap{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
+
+    
+
+
+}
+
+.informblock{
+    width: 30%;
+    height: 300px;
+    
+
+}
+
+.square{
+    width: 70px;
+    height: 76px;
+    background: rgba(231, 64, 64, 1);
+
+}
+.img-1{
+    
+margin-top: 20px;
+margin-left: 20px;
+border-radius: 10px;
+padding: 22px, 19px, 22px, 19px;
+
+
+
+
+}
+.img-2{
+    margin-top: 30px;
+    margin-left: 20px;
+    border-radius: 10px;
+    padding: 22px, 19px, 22px, 19px;
+}
+
+.img-3{
+    margin-top: 20px;
+    margin-left: 20px;
+    border-radius: 10px;
+    padding: 22px, 19px, 22px, 19px;
+}
+.img-4{
+    margin-top: 20px;
+    margin-left: 20px;
+    border-radius: 10px;
+    padding: 22px, 19px, 22px, 19px;
+
+}
+
+
+    
+
+
+.mintext {
+    height: 24px;
+    width: 157px;
+    left: 40px;
+    top: 131px;
+    border-radius: nullpx;
+    margin-top: 20px;
+    
+
+
+    
+
+    
+
+
+}
+.secondtext{
+    height: 60px;
+width: 132px;
+left: 40px;
+top: 197px;
+border-radius: nullpx;
+background: rgba(115, 115, 115, 1);
+
+   
+}
