--- a/css.works/style.css
+++ b/css.works/style.css
@@ -233,69 +233,66 @@ width: 585px;
     align-items: center;
     min-height: 100px;
     margin: 0;
-      padding: 0;
+    padding: 0;
 }
 
 .wrap{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    width: 30%;
+    justify-content: space-around;
     width: 60%;
-    padding: 35px;
-    background: rgba(255, 255, 255, 1);
-
     
-}
-
-.informblock{
-    width: 30px;
-    height: 292px;
-    padding: 30px;
-    box-sizing: border-box;
-    
-
     
 }
 
 .square{
-    width: 70px;
     height: 76px;
-    background: #e74040;
-    padding: 22px;
-    border-radius: 10px;
-    
-    
+width: 70px;
+border-radius: 10px;
+padding: 22px 19px 22px 19px;
+background: rgba(231, 64, 64, 1);
+
+}
+
+.informblock{
+    width: 30%;
+    height: 292px;
+    background: rgba(255, 255, 255, 1);
+     padding: 35px;
+     
 }
 
 .mintext{
     height: 24px;
 width: 157px;
-margin-top: 20px;
-color: #252b42;
-font-size: 16px;
-
+ margin-top: 20px;
+    font-size: 16px;
 
 }
 
 .underlineblock{
-    height: 0;
-    width: 40px;
-    border-top: 2px solid #e74040;
-    
+    height: 2px;
+width: 50px;
+left: 40px;
+top: 175px;
+border-top: solid #e74040;
+margin-top: 15px;
+
 }
+
+ 
+
+
+    
+    
+      
 
 .secondtext{
     height: 60px;
-    width: 132px;
-    color: #737373;
-    margin-top: 15px;
-    
-   
+width: 132px;
+  color: #737373;
+  margin-top: 10px;
+  font-size: 14px;
+  line-height: 20px;
+
 }
-
-.informblock-3{
-    margin-left: 30px;
-}
-
-
