--- a/css.works/style.css
+++ b/css.works/style.css
@@ -172,6 +172,10 @@ cursor: pointer;
 }
 
 
+    
+
+
+
 
 
 
@@ -227,72 +231,76 @@ width: 585px;
     margin-top: 10px;
 }
 
-.cards{
+
+.contenier{
     display: flex;
     justify-content: center;
-    align-items: center;
-    min-height: 100px;
-    margin: 0;
-    padding: 0;
+      flex-wrap: wrap;
 }
 
-.wrap{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 60%;
+.cards{
+    width: 230px;
+    height: 292px;
+    padding: 35px 40px 35px 40px;
+    background: rgba(255, 255, 255, 1);
+    margin: 30px;
+    box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
+    margin-top: 40px;
     
     
+
+
+
+}
+
+.card-img img{
+  margin-top: 20px;
+  margin-left: 20px;
+
 }
 
 .square{
+    width: 70px;
     height: 76px;
-width: 70px;
-border-radius: 10px;
-padding: 22px 19px 22px 19px;
-background: rgba(231, 64, 64, 1);
+    background: rgba(231, 64, 64, 1);
+    border-radius: 10px;
+    
+    
+    
+    
 
 }
 
-.informblock{
-    width: 30%;
-    height: 292px;
-    background: rgba(255, 255, 255, 1);
-     padding: 35px;
-     
-}
-
-.mintext{
+.card-body h5{
+    width: 157px;
     height: 24px;
-width: 157px;
- margin-top: 20px;
     font-size: 16px;
+    line-height: 24px;
+    text-align: left;
+    margin-top: 15px;
 
 }
 
 .underlineblock{
+    width: 50px;
     height: 2px;
-width: 50px;
-left: 40px;
-top: 175px;
-border-top: solid #e74040;
-margin-top: 15px;
-
+    border-top: 2px solid #e74040;
+    margin-top: 20px;
+    padding-top: 10px;
 }
 
- 
-
-
-    
-    
-      
-
-.secondtext{
+.card-body p{
+    width: 132px;
     height: 60px;
-width: 132px;
-  color: #737373;
-  margin-top: 10px;
-  font-size: 14px;
-  line-height: 20px;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgba(115, 115, 115, 1);
+    margin-top: 10px;
+
+    
 
 }
+
+
+
+   
