--- a/css.works/style.css
+++ b/css.works/style.css
@@ -227,16 +227,19 @@ width: 585px;
 .text-3{
     margin-left: 30px;
     color: #fff;
-    font-size: 15px;
-    margin-top: 10px;
+    
+    
+      
 }
-
 
 .contenier{
     display: flex;
     justify-content: center;
-      flex-wrap: wrap;
+    flex-wrap: wrap;
+    
 }
+
+
 
 .cards{
     width: 230px;
@@ -246,6 +249,7 @@ width: 585px;
     margin: 30px;
     box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
     margin-top: 40px;
+    
     
     
 
@@ -272,18 +276,17 @@ width: 585px;
 }
 
 .card-body h5{
-    width: 157px;
-    height: 24px;
+    
+    
     font-size: 16px;
     line-height: 24px;
-    text-align: left;
+    
     margin-top: 15px;
 
 }
 
 .underlineblock{
     width: 50px;
-    height: 2px;
     border-top: 2px solid #e74040;
     margin-top: 20px;
     padding-top: 10px;
@@ -291,7 +294,6 @@ width: 585px;
 
 .card-body p{
     width: 132px;
-    height: 60px;
     font-size: 14px;
     line-height: 20px;
     color: rgba(115, 115, 115, 1);
@@ -300,6 +302,44 @@ width: 585px;
     
 
 }
+
+.cards-1{
+    width: 230px;
+    height: 292px;
+    padding: 35px 40px 35px 40px;
+    background: rgba(255, 255, 255, 1);
+    margin: 30px;
+    box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
+    margin-top:14px;
+}
+
+.cards-2{
+    width: 230px;
+    height: 292px;
+    padding: 35px 40px 35px 40px;
+    background: rgba(255, 255, 255, 1);
+    margin: 30px;
+    box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
+    margin-top: 40px; 
+    margin-right: 10px;
+    
+}
+
+.cards-3{
+    width: 230px;
+    height: 292px;
+    padding: 35px 40px 35px 40px;
+    background: rgba(255, 255, 255, 1);
+    margin: 30px;
+    box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
+    margin-top: 10px;
+}
+
+
+
+
+
+
 
 
 
