--- a/css.works/style.css
+++ b/css.works/style.css
@@ -369,63 +369,72 @@ margin-left: 40px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
 }
 
-.cards-product{
+.card-product{
     width: 240px;
-    height: 600px;
-    background: rgba(255, 255, 255, 1);
     margin: 10px;
-
+    background: #fff;
+    height: 650px;
 }
 
-.category-card{
-    position: absolute;
-    color: #fff;
+.img-card{
+    width: 238px;
+    height: 230px;
+}
+.card-category{
     width: 51px;
     border-radius: 3px;
     background-color: #e74040;
-    text-align: center;
+    position: absolute;
     margin-top: 10px;
     margin-left: 10px;
-    
-    
+}
 
+
+.text-sale{
+  color: rgba(255, 255, 255, 1);
+  text-align: center;
+
+}
+
+.icone-pictures{
     
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+     justify-content: space-around;
+    margin-right: 10px;
+   align-items: center;
+   
     
     
 }
 
-.text-language{
+.title-card{
+    color: #23a6f0;
     width: 54px;
     height: 24px;
-    color: #23a6f0;
-    padding-left: 10px;
-    font-size: 14px;
-    margin-top: 20px;
-      
-     
+    margin-top: 50px;
+    margin-left: 10px;
 }
 
-.text-title{
+.text-card{
     width: 131px;
     height: 24px;
     font-size: 16px;
-    color: #252b42; 
-    text-align: center;
-    margin-top: 5px;
+    color: #252b42;
+    margin-left: 10px;
 }
 
-  .text-info{
+.description-card{
     width: 182px;
     height: 24px;
-     font-size: 14px;
-     color: #737373;
-     text-align: center;
-  }
+    color: #737373;
+    margin-left: 10px;
+}
 
- 
+
 
 
 
