--- a/css.works/style.css
+++ b/css.works/style.css
@@ -365,125 +365,114 @@ margin-left: 40px;
     
 }
  
-.container{
+
+
+
+.title-4{
+    height: 768px;
+}
+
+.title-text-4{
+    height: 24px;
+    margin-top :60px;
+    margin-left: 40px;
+    color: #23a6f0;
+
+}
+
+.text-h2-4{
+    height: 50px;
+    color: rgba(255, 255, 255, 1);
+     margin-left: 40px;
+     margin-top: 5px;
+     font-size: 40px;
+     width: 700px;
+}
+
+.paragrhap-text-4 {
+     margin-left: 30px;
+     color: #fff;
+     margin-top: 5px;
+}
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container-4{
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-}
-
-.card-product{
-    width: 240px;
-    margin: 10px;
-    background: #fff;
-    height: 650px;
-}
-
-.img-card{
-    width: 238px;
-    height: 230px;
-}
-.card-category{
-    width: 51px;
-    border-radius: 3px;
-    background-color: #e74040;
-    position: absolute;
-    margin-top: 10px;
-    margin-left: 10px;
-}
-
-
-.text-sale{
-  color: rgba(255, 255, 255, 1);
-  text-align: center;
-
-}
-
-.icone-pictures{
     
+}
+
+.card-1{
     
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 10px;
+    width: 501px;
+    background: rgba(255, 255, 255, 1);
+    margin: 20px;
+    height: 370px;
+  left: 3.5px;
+ top: 0px;
+ border-radius: 0px;
+ padding: 25px 25px 0px 25px;
+
+
+}
+
+.img-card-1{
+    width: 128px;
+    height: 128px;
+    margin-left: 100px;
+    border-radius: 50px;
+    margin-top: 30px;
     
      
+    
+}
+
+.info-card{
+ width: 341px;
+  height: 60px;
+   color: #737373;
+   line-height: 20px;
+    text-align: center;
+    margin-top: 10px;
+    
+    
    
-   
+}
+
+.star-card{
+    
+   margin-left: 120px;
+   margin-top: 10px;
     
     
 }
 
 .title-card{
-    color: #23a6f0;
-    width: 54px;
+    width: 105px;
     height: 24px;
-    margin-left: 10px;
-    margin-top: 50px;
+    margin-left: 130px;
+    margin-top: 10px;
+    font-size: 16px;
     
 }
 
 .text-card{
-    width: 131px;
-    height: 24px;
-    font-size: 16px;
-    color: #252b42;
-    margin-left: 10px;
-    text-align: center;
-    margin-top: 10px;
-}
-
-.description-card{
-    width: 182px;
-    height: 24px;
-    color: #737373;
-    margin-left: 10px;
-    text-align: center;
-    margin-top: 10px;
-    font-family: sans-serif;
-    
-}
-
-.icone-1{
-    margin: 5px;
-    
-}
-.icone-2{
-    margin: 5px;
-}
-
-.icone-3{
-    margin: 3px;
-}
-
-.text-sales{
-    width: 157px;
+    width: 65px;
     height: 24px;
     font-size: 14px;
     color: #737373;
-    text-align: center;
-    
-    
-    
+    margin-left: 140px;
+    margin-top: 10px;
 }
 
-.vector-1{
-    width: 7px;
-    height: 11px;
-    color: #737373;
-    margin-top: 20px;
-    margin-left: 10px;
-    position: absolute;
-    
-}
 
-.vector-card-2{
-    width: 16px;
-    height: 5px;
-    color: #737373;
-    margin-top: 40px;
-    margin-left: 10px;
-    
-}
 
 
 
