--- a/css.works/style.css
+++ b/css.works/style.css
@@ -369,8 +369,7 @@ margin-left: 40px;
 
 
 .title-4{
-    height: 768px;
-}
+}  
 
 .title-text-4{
     height: 24px;
@@ -407,6 +406,8 @@ margin-left: 40px;
     display: flex;
     justify-content: center;
     
+    
+    
 }
 
 .card-1{
@@ -419,6 +420,8 @@ margin-left: 40px;
  top: 0px;
  border-radius: 0px;
  padding: 25px 25px 0px 25px;
+  margin-top: 30px;
+  margin-right: 10px;
 
 
 }
@@ -426,7 +429,7 @@ margin-left: 40px;
 .img-card-1{
     width: 128px;
     height: 128px;
-    margin-left: 100px;
+    margin-left: 140px;
     border-radius: 50px;
     margin-top: 30px;
     
@@ -441,6 +444,7 @@ margin-left: 40px;
    line-height: 20px;
     text-align: center;
     margin-top: 10px;
+    margin-left: 30px;
     
     
    
@@ -448,7 +452,7 @@ margin-left: 40px;
 
 .star-card{
     
-   margin-left: 120px;
+   margin-left: 140px;
    margin-top: 10px;
     
     
@@ -457,7 +461,7 @@ margin-left: 40px;
 .title-card{
     width: 105px;
     height: 24px;
-    margin-left: 130px;
+    margin-left: 150px;
     margin-top: 10px;
     font-size: 16px;
     
@@ -468,7 +472,7 @@ margin-left: 40px;
     height: 24px;
     font-size: 14px;
     color: #737373;
-    margin-left: 140px;
+    margin-left: 165px;
     margin-top: 10px;
 }
 
