--- a/css.works/style.css
+++ b/css.works/style.css
@@ -383,7 +383,7 @@ margin-left: 40px;
     height: 50px;
     color: rgba(255, 255, 255, 1);
      margin-left: 40px;
-     margin-top: 5px;
+     margin-top: 3px;
      font-size: 40px;
      width: 700px;
 }
@@ -475,6 +475,113 @@ margin-left: 40px;
     margin-left: 165px;
     margin-top: 10px;
 }
+
+.title-5{
+    
+    margin-left: 480px;
+    margin-top: 200;
+    display: block;
+    
+    
+    
+}
+
+.title-text-5{
+    width: 114px;
+    height: 24px;
+    color: #23a6f0;
+      margin-left: 150px;
+      margin-top: 90px;
+      text-align: right;
+      font-size: 14px;
+      line-height: 24px;
+         
+      
+      
+      
+    
+}
+
+.text-5{
+    width: 169px;
+    height: 50px;
+    text-align: center;
+    margin-left: 130px;
+    color: #fff;
+    margin-top: 10px;
+     font-size: 40px;
+     
+     
+}
+
+
+.text-info-text-5{
+    width: 469px;
+    height: 40px;
+    color: #fff;
+    line-height: 20px;
+    margin-right: 10px;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 10px;
+    
+    
+    
+    
+    
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "popines" sans-serif; 
+    box-sizing: border-box;
+}
+
+
+.container-input{
+    margin-top: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+form{
+    background: #fff;
+    width: 688px;
+    height: 58px;
+    display: flex;
+    
+    
+    
+}
+
+form input{
+    flex: 1;
+    border: none;
+    outline: none;
+     margin-left: 20px;
+     font-size: 14px;
+     color: #737373;
+     line-height: 28px;
+
+}
+
+form button{
+    background: #23a6f0;
+    padding: 10px 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+
+
+
+
+
 
 
 
