--- a/css.works/style.css
+++ b/css.works/style.css
@@ -408,6 +408,7 @@ margin-left: 40px;
     
     
     
+    
 }
 
 .card-1{
@@ -478,9 +479,9 @@ margin-left: 40px;
 
 .title-5{
     
-    margin-left: 480px;
+    margin-left: 460px;
     margin-top: 200;
-    display: block;
+
     
     
     
@@ -490,7 +491,7 @@ margin-left: 40px;
     width: 114px;
     height: 24px;
     color: #23a6f0;
-      margin-left: 150px;
+      margin-left: 140px;
       margin-top: 90px;
       text-align: right;
       font-size: 14px;
@@ -506,7 +507,7 @@ margin-left: 40px;
     width: 169px;
     height: 50px;
     text-align: center;
-    margin-left: 130px;
+    margin-left: 120px;
     color: #fff;
     margin-top: 10px;
      font-size: 40px;
@@ -520,7 +521,6 @@ margin-left: 40px;
     height: 40px;
     color: #fff;
     line-height: 20px;
-    margin-right: 10px;
     font-size: 16px;
     text-align: center;
     margin-top: 10px;
@@ -544,6 +544,7 @@ margin-left: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 form{
@@ -579,7 +580,79 @@ form button{
 
 
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+.footer-body{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+footer{
+    background: #fff;
+    position: relative;
+    width: 100%;
+    height: 338px;
+    padding: 3rem 1rem;
+}
+
+.container-footer{
+    max-width: 1140px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.col{
+    color: #252b42;
+    font-family: poppins;
+    padding: 0 2rem;
+
+    
+}
+
+.col h3{
+    color: #252b42;
+    margin-bottom: 20px;
+    
+}
+
+  .col .social{
+    margin-top: 30px;
+    margin: 10px;
+
+    
+      
+}
+
+.col .links a{
+    display: block;
+    text-decoration: none;
+    color: #737373;
+    line-height: 30px;
+    position: relative;
+
+}
+
+
+    
+
+ 
+ 
+ 
 
 
 
