--- a/css.works/style.css
+++ b/css.works/style.css
@@ -651,7 +651,14 @@ footer{
     margin: 10px;
 }
 
+.text-footer{
+    color: #737373;
+    font-size: 14px;
+    margin-top: 100px;
+    margin-left: 500px;
+    line-height: 24px;
 
+}
     
 
  
