--- a/css.works/style.css
+++ b/css.works/style.css
@@ -396,11 +396,7 @@ margin-left: 40px;
 
 
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 
 .container-4{
     display: flex;
@@ -440,7 +436,6 @@ margin-left: 40px;
 
 .info-card{
  width: 341px;
-  height: 60px;
    color: #737373;
    line-height: 20px;
     text-align: center;
@@ -524,6 +519,7 @@ margin-left: 40px;
     font-size: 16px;
     text-align: center;
     margin-top: 10px;
+    
     
     
     
@@ -655,10 +651,79 @@ footer{
     line-height: 24px;
 
 }
-    
 
- 
- 
+
+
+
+.container-card{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.card-product{
+    width: 240px;
+    background: #fff;
+    height: 650px;
+    margin: 10px;
+}
+
+.card-category{
+    width: 51px;
+    border-radius: 3px;
+    background: #e74040;
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.text-sale{
+    color: #fff;
+    text-align: center;
+}
+
+.icone-pictures{
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+     justify-content: space-around;
+    margin-right: 10px;
+   
+}
+
+.title-card-1{
+    color: #23a6f0;
+    width: 54px;
+    height: 24px;
+    margin-top: 50px;
+    margin-left: 10px;
+}
+
+.img-card{
+    width: 238px;
+    height: 230px;
+}
+
+
+.text-card-1 {
+    width: 131px;
+    height: 24px;
+    font-size: 16px; 
+    text-align: center;
+    margin-top: 5px;
+    color: #252b42;
+    margin-left: 10px
+}
+
+.description-card{
+    width: 182px;
+    height: 24px;
+    color: #737373;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+
  
 
 
