--- a/css.works/style.css
+++ b/css.works/style.css
@@ -722,6 +722,19 @@ footer{
     margin-left: 10px;
     margin-top: 10px;
 }
+.icone-1{
+    
+    margin-left: 20px;
+    
+}
+.icon-2{
+    margin-right: 10px;
+    padding-left: 10px;
+}
+
+.icon-3{
+    padding-right: 50px;
+}
 
 
  
