--- a/css.works/style.css
+++ b/css.works/style.css
@@ -722,6 +722,7 @@ footer{
     color: #737373;
     margin-left: 10px;
     margin-top: 10px;
+    font-size: 14px;
 }
 .icone-1{
     
@@ -736,6 +737,25 @@ footer{
 .icon-3{
     padding-right: 50px;
 }
+
+.vector-1{
+    margin-top: 20px;
+    margin-left: 1px;
+    
+}
+
+.vector-2{
+    margin-left: 2px;
+    margin-top: 30px;
+    
+}
+
+.text-vector{
+    text-align: center;
+    margin-right: 140px;
+}
+
+
 
 
  
