--- a/css.works/style.css
+++ b/css.works/style.css
@@ -755,6 +755,43 @@ footer{
     margin-right: 140px;
 }
 
+.text-card-h5{
+    height: 24px;
+width: 52px;
+left: 3px;
+top: 5px;
+border-radius: nullpx;
+color:  rgba(189, 189, 189, 1);
+
+}
+
+.text-card-h5-2{
+    height: 24px;
+width: 45px;
+left: 60px;
+top: 5px;
+border-radius: nullpx;
+ text-align: center;
+}
+
+.button-card{
+    background: #fff;
+    width: 170px;
+    height: 50px;
+    border-radius: 30px;
+    border: 1px solid #23a6f0;
+    
+}
+
+.text-button-card{
+    height: 24px;
+width: 82px;
+  color: #23a6f0;
+  text-align: center;
+  font-size: 14px;
+  margin-left: 30px;
+}
+
 
 
 
